# cartridge

./: main.py  pyproject.toml  replit.md  seed_data.py
attached_assets/: Pasted--19-12-30-12-root-systemd-1-cartridge-service-Scheduled_1768825872589.txt  Pasted--Python-FastAPI--1768279998469_1768279998469.txt  Pasted--cartridge-venv-root-root-home-account-sudo-journalctl-_1768825990547.txt  Pasted-cartridge-db-ALTER-TABLE-pending-registrations-ADD-COLU_1768826041410.txt
src/: models.py  schemas.py
templates/: admin_registrations.html  base.html  cartridges.html  change_password.html  dashboard.html  departments.html  employees.html  login.html  register.html  reports.html  service_notes.html  warehouses.html
