[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "fastapi>=0.128.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "starlette>=0.50.0",
    "uvicorn>=0.40.0",
]
